unpackaged/main/default/objects/GC_Show_Team_Assignment__c/GC_Show_Team_Assignment__c.object-meta.xml
<CustomObject>
    <description>Object which links a show team member to a Design Element, Work Order Task, or Sign Order Task to facilitate a Show Team Member being assigned to one of those records</description>
    <label>Show Team Assignment</label>
    <nameField>
        <displayFormat>STA-{0000000}</displayFormat>
        <label>Show Team Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Show Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>