unpackaged/main/default/objects/GC_Show_Team_Assignment__c/fields/Connect2_Show__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connect2 Show</label>
    <referenceTo>GC_Connect2_Show__c</referenceTo>
    <relationshipLabel>Show Team Assignments</relationshipLabel>
    <relationshipName>Show_Team_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>