unpackaged/main/default/objects/GC_Show_Team_Assignment__c/fields/Design_Element__c.field-meta.xml
<CustomField>
    <fullName>Design_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Element</label>
    <referenceTo>GC_Design_Element__c</referenceTo>
    <relationshipLabel>Show Team Assignments</relationshipLabel>
    <relationshipName>Show_Team_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>