unpackaged/main/default/objects/GC_Show_Team_Assignment__c/fields/Show_Team_Assignment_Unique__c.field-meta.xml
<CustomField>
    <fullName>Show_Team_Assignment_Unique__c</fullName>
    <label>Show Team Assignment Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>