unpackaged/main/default/objects/GC_Show_Team_Assignment__c/fields/Show_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Show_Team_Member__c</fullName>
    <label>Show Team Member</label>
    <referenceTo>GC_Show_Team_Member__c</referenceTo>
    <relationshipLabel>Show Team Assignments</relationshipLabel>
    <relationshipName>Show_Team_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>