unpackaged/main/default/objects/GC_Show_Team_Assignment__c/fields/Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Name__c</fullName>
    <formula>Show_Team_Member__r.User__r.FirstName + &#39; &#39; + Show_Team_Member__r.User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member Name</label>
    <type>Text</type>
</CustomField>