unpackaged/main/default/objects/GC_Show_Team_Assignment__c/fields/Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Role__c</fullName>
    <formula>TEXT(Show_Team_Member__r.Show_Role__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Member Role</label>
    <type>Text</type>
</CustomField>