unpackaged/main/default/objects/GC_Show_Team_Assignment__c/recordTypes/Design_Element_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Design_Element_Assignment</fullName>
    <active>true</active>
    <description>Record Type for Assigning Show Team Members to Design Element Tasks.</description>
    <label>Design Element Assignment</label>
</RecordType>